--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
 
-    runs-on: flaskfarm/flaskfarm:4.0
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
